# solitaire-deal-generator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  board.c  card.c  game.c  main.c  move.c  rand.c  results.c  sim.c  sim.h  spot.c  string_util.c  util.c  version.h
src/game/: acesup.c  easthaven.c  freecell.c  klondike.c  pyramid.c  tripeaks.c
